--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/lolbang/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/lolbang/logo192.png"/><link rel="/manifest" href="/lolbang/manifest.json"/><title>React App</title><script defer="defer" src="/lolbang/static/js/main.69b8bc0e.js"></script><link href="/lolbang/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/lolbang/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="/lolbang/logo192.png" />
+    <link rel="/manifest" href="/lolbang/manifest.json" />
+    <title>React App</title>
+    <script defer="defer" src="./lolbang/static/js/main.69b8bc0e.js"></script>
+    <link href="./lolbang/static/css/main.073c9b0a.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
