--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./lolbang/favicon.ico" />
+    <link rel="icon" href="/lolbang/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./lolbang/logo192.png" />
-    <link rel="/manifest" href="./lolbang/manifest.json" />
+    <link rel="apple-touch-icon" href="/lolbang/logo192.png" />
+    <link rel="/manifest" href="/lolbang/manifest.json" />
     <title>React App</title>
-    <script defer="defer" src="./lolbang/static/js/main.7c0de301.js"></script>
-    <link href="./lolbang/static/css/main.073c9b0a.css" rel="stylesheet" />
+    <script defer="defer" src="/lolbang/static/js/main.7c0de301.js"></script>
+    <link href="/lolbang/static/css/main.073c9b0a.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
